[package]
name = "rdest"
version = "0.1.0"
authors = ["Mateusz Janda <mateusz.janda@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "rdest is simple BitTorrent client, currently supporting BEP3 specification."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
sha1 = "0.6.0"
rand = "0.6.0"
structopt = "0.3.21"
url = "2.1.1"
bytes = "0.5"
termion = "1.5.5"
reqwest = { version = "0.10.8" }
tokio = { version = "0.2", features = ["full"] }
