[package]
name = "rdest"
description = "rdest is simple BitTorrent client, currently supporting BEP3 specification."
version = "0.1.0"
authors = ["Mateusz Janda <mateusz.janda@gmail.com>"]
repository = "https://github.com/MateuszJanda/rdest"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["torrent", "bittorrent", "p2p"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
sha1_smol = "1.0"
rand = "0.8"
structopt = "0.3"
url = "2.2"
bytes = "1.2"
termion = "1.5"
reqwest = { version = "0.11" }
tokio = { version = "1.20", features = ["full"] }
